--- a/frontend-Django1/src/app/components/factura/actualizar-factura/actualizar-factura.component.html
+++ b/frontend-Django1/src/app/components/factura/actualizar-factura/actualizar-factura.component.html
@@ -1,1 +1,64 @@
-<p>actualizar-factura works!</p>
+<p-card header="Editar Clientes" [style]="{ width: '100%' }">
+    <ng-template pTemplate="header">
+
+    </ng-template>
+    <div>
+        <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()" class="p-3 bg-faded">
+
+
+            <div class="grid">
+                <div class="col-12 sm:col-6">
+                    <div class="p-inputgroup mb-1">
+                        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+                        <input class="w-12" type="text" pInputText formControlName="total"
+                            placeholder="total cliente" title="total cliente">
+                    </div>
+                </div>
+
+                <div class="col-12 sm:col-6">
+                    <div class="p-inputgroup mb-1">
+                        <span class="p-inputgroup-addon"><i class="pi pi-fw pi-qrcode"></i></span>
+                        <p-treeSelect class="md:w-10rem w-12" containerStyleClass="w-12" [options]="client"
+                            formControlName="cliente" placeholder="Seleccione un cliente" [showClear]="true"
+                            selectionMode="single">
+                        </p-treeSelect>
+                    </div>
+                </div>
+
+                <!-- <div class="col-12 sm:col-6">
+                    <div class="p-inputgroup mb-1 ">
+                        <span class="p-inputgroup-addon"><i class="pi pi-wallet"></i></span>
+                        <input class="w-12" type="text" pInputText formControlName="cliente"
+                            placeholder="cliente" title="cliente">
+                    </div>
+                </div> -->
+
+        
+                <!-- <div class="col-12 sm:col-6">
+                    <div class="p-inputgroup mb-1">
+                        <span class="p-inputgroup-addon"><i class="pi pi-fw pi-qrcode"></i></span>
+                        <p-treeSelect class="md:w-10rem w-12" containerStyleClass="w-12" [options]="categories"
+                            formControlName="categoria" placeholder="Seleccione una categoria" [showClear]="true"
+                            selectionMode="single">
+                        </p-treeSelect>
+                    </div>
+                </div> -->
+
+            </div>
+
+            <div class="flex justify-content-center flex-wrap">
+                <button pButton pRipple label="Aceptar" icon="pi pi-save" severity="info" class="mr-4"
+                    type="submit"></button>
+
+                <button pButton pRipple label="Cancelar" icon="pi pi-times-circle" severity="warning" class="mr-4"
+                    type="button" (click)="cancel()"></button>
+            </div>
+
+
+        </form>
+
+    </div>
+    <ng-template pTemplate="footer">
+
+    </ng-template>
+</p-card>
