ultimo cambio 10:05pm

--- a/frontend-inventario/src/app/components/factura/mostrar-factura/mostrar-factura.component.html
+++ b/frontend-inventario/src/app/components/factura/mostrar-factura/mostrar-factura.component.html
@@ -27,7 +27,7 @@
             <ng-template pTemplate="body" let-facturas>
                 <tr>
                     <td>{{ facturas.total }}</td>
-                    <td>{{ facturas.cliente }}</td>
+                    <td>{{ facturas.cliente.nombre }}</td>
                     <td class="flex justify-content-center flex-wrap">
                         <button 
                             pButton 
