cambio dairo todo actualizado

--- a/frontend-gestion-inventario/src/app/components/factura/actualizar-factura/actualizar-factura.component.html
+++ b/frontend-gestion-inventario/src/app/components/factura/actualizar-factura/actualizar-factura.component.html
@@ -1,4 +1,4 @@
-<p-card header="Editar Clientes" [style]="{ width: '100%' }">
+<p-card header="Editar Facturas" [style]="{ width: '100%' }">
     <ng-template pTemplate="header">
 
     </ng-template>
