--- a/frontend-gestion-inventario/src/app/components/detalleFactura/actualizar-detalle-factura/actualizar-detalle-factura.component.html
+++ b/frontend-gestion-inventario/src/app/components/detalleFactura/actualizar-detalle-factura/actualizar-detalle-factura.component.html
@@ -19,8 +19,8 @@
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-                        <input class="w-12" type="text" pInputText formControlName="precio_unitario" placeholder="Precio Unitario"
-                            title="Precio Unitario">
+                        <input class="w-12" type="text" pInputText formControlName="precio_unitario"
+                            placeholder="Precio Unitario" title="Precio Unitario">
                     </div>
                 </div>
 
@@ -40,6 +40,7 @@
                             formControlName="factura" placeholder="Seleccione una factura" [showClear]="true"
                             selectionMode="single">
                         </p-treeSelect>
+
                     </div>
                 </div>
 
