--- a/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
+++ b/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
@@ -1,18 +1,13 @@
-
-<div class="grid h-full">
-    <div class="col-3 flex flex-wrap align-items-center justify-content-center">
-        <!-- <h1 class="">Logo</h1> -->
-        <img src="https://cdn-icons-png.freepik.com/256/12201/12201509.png?semt=ais_hybrid" alt="" class="h-8rem py-3 px-5">
-        
+<div class="header-container">
+    <div class="logo-section">
+        <img src="https://cdn-icons-png.flaticon.com/512/4245/4245820.png" alt="Logo Inventario" class="logo-img">
     </div>
-    <div class="col-7 flex flex-wrap align-items-center justify-content-center">
-            <h1>SOFTWARE DE INVENTARIO</h1>
-            <p>
-                Aplicativo que permite llevar todo sistematizado ... !!!
-            </p>
+    <div class="title-section">
+        <h1>Inventario Maestro</h1>
+        <p class="subtitle">Gestión y control eficiente</p>
     </div>
-    <div class="col-2 flex flex-wrap align-items-center justify-content-center">
-        <!-- <h1 class="">Sesion</h1> -->
-        <img src="https://img.freepik.com/vector-gratis/circulo-azul-usuario-blanco_78370-4707.jpg" alt="" class="h-8rem py-3 px-5">
-
+    <div class="user-section">
+        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Icono Usuario" class="user-icon">
+        <p class="username">Sesión</p>
+    </div>
 </div>
