--- a/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
+++ b/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="header-container">
     <div class="logo-section">
-        <img src="https://cdn-icons-png.flaticon.com/512/4245/4245820.png" alt="Logo Inventario" class="logo-img">
+        <img src="https://cdn-icons-png.flaticon.com/128/6828/6828668.png" alt="Logo Inventario" class="icon-img">
     </div>
     <div class="title-section">
         <h1>Inventario Maestro</h1>
         <p class="subtitle">Gestión y control eficiente</p>
     </div>
     <div class="user-section">
-        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Icono Usuario" class="user-icon">
-        <p class="username">Sesión</p>
+        <img src="https://cdn-icons-png.flaticon.com/128/12449/12449018.png" alt="Icono Usuario" class="icon-img">
+
     </div>
 </div>
