--- a/frontend-gestion-inventario/src/app/components/cliente/mostrar-cliente/mostrar-cliente.component.html
+++ b/frontend-gestion-inventario/src/app/components/cliente/mostrar-cliente/mostrar-cliente.component.html
@@ -1,70 +1,63 @@
 <p-card class="w-12 h-full">
     <ng-template pTemplate="header">
-        <div class="flex justify-content-between flex-wrap">
-            <h3 class="ml-4">Registro de Clientes</h3>
-            <div class="mt-2 mr-2">
-                <a 
-                    pButton 
-                    pRipple
-                    label="Crear Clientes" 
-                    icon="pi pi-user-plus"
-                    class="bg-cyan-600"
-                    [ngStyle]="{'text-decoration': 'none'}" 
-                    [routerLink]="['/clientes/nuevo']">
-                </a>
-            </div>
+      <div class="flex justify-content-between flex-wrap">
+        <h3 class="ml-4">Registro de Clientes</h3>
+        <div class="mt-2 mr-2">
+          <a 
+            pButton 
+            pRipple
+            label="Crear Clientes" 
+            icon="pi pi-user-plus"
+            class="bg-cyan-600 button-size" 
+            [ngStyle]="{'text-decoration': 'none'}" 
+            [routerLink]="['/clientes/nuevo']">
+          </a>
         </div>
+      </div>
     </ng-template>
+    
     <p>
-        <p-table [value]="clientes">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Nombre</th>
-                    <th>Direccion</th>
-                    <th>Telefono</th>
-                    <th>E-mail</th>
-                    <th class="flex justify-content-center flex-wrap">Acciones</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-clientes>
-                <tr>
-                    <td>{{ clientes.nombre }}</td>
-                    <td>{{ clientes.direccion }}</td>
-                    <td>{{ clientes.telefono }}</td>
-                    <td>{{ clientes.email }}</td>
-                    <td class="flex justify-content-center flex-wrap">
-                        <button 
-                            pButton 
-                            pRipple
-                            icon="pi pi-print"
-                            class="bg-cyan-600 mr-1">
-                        
-                        </button>
-                        <a 
-                            pButton 
-                            pRipple
-                            icon="pi pi-sync"
-                            severity="warning"
-                            class="mr-1"
-                            [ngStyle]="{'text-decoration': 'none'}" 
-                            [routerLink]="['/clientes/edit', clientes.id]">
-                            Editar
-                        </a>
-                        <button 
-                            pButton 
-                            pRipple
-                            severity="danger"
-                            icon="pi pi-eraser"
-                            class="mr-1"
-                            (click)="eliminar(clientes.id)">
-                            Eliminar
-                        </button>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
+      <p-table [value]="clientes">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Nombre</th>
+            <th>Direccion</th>
+            <th>Telefono</th>
+            <th>E-mail</th>
+            <th class="flex justify-content-center flex-wrap">Acciones</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-clientes>
+          <tr>
+            <td>{{ clientes.nombre }}</td>
+            <td>{{ clientes.direccion }}</td>
+            <td>{{ clientes.telefono }}</td>
+            <td>{{ clientes.email }}</td>
+            <td class="flex justify-content-center flex-row">
+              <a 
+                pButton 
+                pRipple
+                icon="pi pi-sync"
+                severity="warning"
+                class="mr-1 button-size"
+                [ngStyle]="{'text-decoration': 'none'}" 
+                [routerLink]="['/clientes/edit', clientes.id]">
+                Editar
+              </a>
+              <button 
+                pButton 
+                pRipple
+                severity="danger"
+                icon="pi pi-eraser"
+                class="mr-1 button-size"
+                (click)="eliminar(clientes.id)">
+                Eliminar
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
     </p>
     <p-confirmDialog></p-confirmDialog>
-</p-card>
-
-
+  </p-card>
+  
