--- a/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.html
+++ b/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.html
@@ -19,31 +19,24 @@
         <p-table [value]="productos">
             <ng-template pTemplate="header">
                 <tr>
-                    <th style="text-align: center; vertical-align: middle;">Nombre</th>
-                    <th style="text-align: center; vertical-align: middle;">Descripcion</th>
-                    <th style="text-align: center; vertical-align: middle;">Precio</th>
-                    <th style="text-align: center; vertical-align: middle;">Stock Actual</th>
-                    <th style="text-align: center; vertical-align: middle;">Stock Minimo</th>
-                    <th style="text-align: center; vertical-align: middle;">Categoria</th>
-                    <th class="flex justify-content-center flex-wrap">Acciones</th>
+                    <th >Nombre</th>
+                    <th >Descripcion</th>
+                    <th >Precio</th>
+                    <th >Stock Actual</th>
+                    <th >Stock Minimo</th>
+                    <th >Categoria</th>
+                    <th >Acciones</th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-productos>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">{{ productos.nombre }}</td>
-                    <td style="text-align: center; vertical-align: middle;">{{ productos.descripcion }}</td>
-                    <td style="text-align: center; vertical-align: middle;">{{ productos.precio }}</td>
-                    <td style="text-align: center; vertical-align: middle;">{{ productos.stock_actual }}</td>
-                    <td style="text-align: center; vertical-align: middle;">{{ productos.stock_minimo }}</td>
+                    <td >{{ productos.nombre }}</td>
+                    <td >{{ productos.descripcion }}</td>
+                    <td >{{ productos.precio }}</td>
+                    <td >{{ productos.stock_actual }}</td>
+                    <td >{{ productos.stock_minimo }}</td>
                     <td>{{ productos.categoria.nombre}}</td>
-                    <td class="flex justify-content-center flex-wrap">
-                        <!-- <button 
-                            pButton 
-                            pRipple
-                            icon="pi pi-print"
-                            class="bg-cyan-600 mr-1">
-                        
-                        </button> -->
+                    <td class="flex justify-content-center flex-row">
                         <a 
                             pButton 
                             pRipple
@@ -52,7 +45,6 @@
                             class="mr-1 small-button"
                             [ngStyle]="{'text-decoration': 'none'}" 
                             [routerLink]="['/productos/edit', productos.id]">
-                            
                         </a>
                         <button 
                             pButton 
@@ -61,9 +53,9 @@
                             icon="pi pi-eraser"
                             class="mr-1 small-button"
                             (click)="eliminar(productos.id)">
-                        
                         </button>
                     </td>
+                    
                 </tr>
             </ng-template>
         </p-table>
