--- a/frontend-gestion-inventario/src/styles.css
+++ b/frontend-gestion-inventario/src/styles.css
@@ -1,16 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importación de fuentes */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import "primeng/resources/themes/lara-light-blue/theme.css";
-
 @import "primeng/resources/primeng.min.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 @import "styles.css";
 
-
-p,  h3, h4, h5, h6, input, textarea {
-    color: #5D6970; /* Color extraído del código anterior */
-    font-family: Arial, sans-serif;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px; /* O cualquier otra fuente que prefieras */
+/* Sombra resaltada para p-card */
+p-card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra más visible */
+    border-radius: 8px; /* Bordes suavizados */
+    transition: box-shadow 0.3s ease;
 }
 
+p-card:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra aumentada al hacer hover */
+}
+
+/* Tipografía para elementos de texto */
+p, h3, h4, h5, h6, input, textarea {
+    color: #5D6970;
+    font-family: 'Roboto', Arial, sans-serif; /* Aplica 'Roboto' con Arial de respaldo */
+    font-size: 16px;
+}
+
+/* Estilos para filas <tr> y celdas <td> */
+tr {
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+tr:hover {
+    background-color: #f0f8ff;
+    color: #485e75;
+    cursor: pointer;
+}
