--- a/frontend-gestion-inventario/src/app/app.component.css
+++ b/frontend-gestion-inventario/src/app/app.component.css
@@ -1,46 +1,36 @@
 main {
     display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr 1fr  1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-    "header header  header  header  header"
-    "aside  section section section section"
-    "footer footer  footer  footer  footer";
+    "aside header header header header"
+    "aside section section section section"
+    "footer footer footer footer footer";
     row-gap: 0;
     column-gap: 0;
-    grid-template-rows: 20% 70% 10%;
+    grid-template-rows: 20% 1fr 10%; /* Cambié 70% a 1fr para asegurar que el footer esté en la parte inferior */
     height: 98vh;
 }
 
 header {
     grid-area: header;
-
 }
 
 aside {
     grid-area: aside;
-   
-    padding: 1px;  /* Espacio interno más pequeño */
-  margin: 1px;    /* Espacio externo más pequeño */
+    
 }
 
 section {
     grid-area: section;
-  
-}
-
-.recuadros {
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 20px;
-    margin: 2px 20px 2px 5px;
-}
-
-.elemento {
-    width: 25%;
 }
 
 footer {
     grid-area: footer;
-  
+    width: 100%; /* Asegura que el footer ocupe toda la anchura */
+    background-color: #f0f8ff; /* Color de fondo para el footer (opcional) */
+    padding: 1rem 0; /* Espaciado en el footer */
+    border-top: 1px solid #e0e0e0; /* Línea superior (opcional) */
+    display: flex;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center; /* Centra el contenido verticalmente */
 }
