--- a/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
+++ b/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="header-container">
-    <div class="logo-section">
-        <img src="https://cdn-icons-png.flaticon.com/128/6828/6828668.png" alt="Logo Inventario" class="icon-img">
-    </div>
-    <div class="title-section">
-        <h1>Inventario Maestro</h1>
-        <p class="subtitle">Gestión y control eficiente</p>
-    </div>
+    <!-- Barra de navegación -->
+    <nav class="nav-bar">
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#acerca-de">Acerca de</a></li>
+        </ul>
+    </nav>
+    <!-- Sección de usuario con el ícono a la derecha -->
     <div class="user-section">
-        <img src="https://cdn-icons-png.flaticon.com/128/12449/12449018.png" alt="Icono Usuario" class="icon-img">
-
+        <img src="https://cdn-icons-png.flaticon.com/128/6828/6828668.png" alt="Icono Usuario" class="icon-img"> 
     </div>
 </div>
