el mejor diseñor

--- a/frontend-gestion-inventario/src/app/components/cliente/actualizar-cliente/actualizar-cliente.component.html
+++ b/frontend-gestion-inventario/src/app/components/cliente/actualizar-cliente/actualizar-cliente.component.html
@@ -1,4 +1,4 @@
-<p-card header="Editar Clientes"  [style]="{ width: '100%' }">
+<p-card header="Actualizar Clientes"  [style]="{ width: '100%' }">
     <ng-template pTemplate="header">
 
     </ng-template>
@@ -10,14 +10,14 @@
           <div class="col-12 sm:col-6">
               <div class="p-inputgroup mb-1">
                   <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="nombre" placeholder="nombreCliente"  title="nombreCliente">         
+                  <input class="w-12" type="text" pInputText formControlName="nombre" placeholder="Nombre Cliente"  title="Nombre Cliente">         
               </div>
           </div>
 
           <div class="col-12 sm:col-6">
             <div class="p-inputgroup mb-1 ">
                   <span class="p-inputgroup-addon"><i class="pi pi-wallet"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="direccion" placeholder="direccionCliente" title="direccionCliente" >          
+                  <input class="w-12" type="text" pInputText formControlName="direccion" placeholder="direccion Cliente" title="Direccion Cliente" >          
             </div>
           </div>
 
@@ -27,24 +27,24 @@
           <div class="col-12 sm:col-6">
               <div class="p-inputgroup mb-1">
                   <span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="telefono" placeholder="telefonoCliente"  title="telefonoCliente">         
+                  <input class="w-12" type="text" pInputText formControlName="telefono" placeholder="Telefono Cliente"  title="Telefono Cliente">         
               </div>
           </div>
 
           <div class="col-12 sm:col-6">
             <div class="p-inputgroup mb-1 ">
                   <span class="p-inputgroup-addon"><i class="pi pi-bookmark"></i></span>
-                  <input class="w-12" type="email" pInputText formControlName="email" placeholder="correoCliente" title="correoCliente" >          
+                  <input class="w-12" type="email" pInputText formControlName="email" placeholder="E-mail Cliente" title="E-mail Cliente" >          
             </div>
           </div>
-
         </div>
+
 
         <div class="flex justify-content-center flex-wrap">
           <button 
                       pButton 
                       pRipple
-                      label="Aceptar"
+                      label="Guardar"
                       icon="pi pi-save"
                       severity="info"
                       class="mr-4"
@@ -64,7 +64,7 @@
         </div>
 
 
-    </form> 
+      </form> 
 
     </div>
     <ng-template pTemplate="footer">
