--- a/frontend-gestion-inventario/src/app/components/factura/mostrar-factura/mostrar-factura.component.html
+++ b/frontend-gestion-inventario/src/app/components/factura/mostrar-factura/mostrar-factura.component.html
@@ -1,14 +1,14 @@
 <p-card class="w-12 h-full">
     <ng-template pTemplate="header">
-        <div class="flex justify-content-between flex-wrap">
-            <h3 class="ml-4">Registro de Facturas</h3>
+        <div class="flex justify-content-between items-center">
+            <h3 class="ml-4 text-xl font-semibold text-gray-800">Registro de Facturas</h3>
             <div class="mt-2 mr-2">
                 <a 
                     pButton 
                     pRipple
                     label="Crear Factura" 
                     icon="pi pi-user-plus"
-                    class="bg-cyan-600"
+                    class="bg-cyan-600 text-white hover:bg-cyan-700 px-4 py-2 rounded-md"
                     [ngStyle]="{'text-decoration': 'none'}" 
                     [routerLink]="['/facturas/nuevo']">
                 </a>
@@ -16,7 +16,7 @@
         </div>
     </ng-template>
     <p>
-        <p-table [value]="facturas">
+        <p-table [value]="facturas" class="custom-table" [rows]="10" [paginator]="true" [responsive]="true">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Total</th>
@@ -28,23 +28,26 @@
                 <tr>
                     <td>{{ facturas.total }}</td>
                     <td>{{ facturas.cliente.nombre }}</td>
-                    <td class="flex justify-content-center flex-wrap">
+                    <td class="flex justify-content-center space-x-2">
+                        <!-- Botón de editar -->
                         <a 
                             pButton 
                             pRipple
                             icon="pi pi-sync"
                             severity="warning"
-                            class="mr-1"
+                            class="small-button p-button-rounded p-button-text"
                             [ngStyle]="{'text-decoration': 'none'}" 
                             [routerLink]="['/facturas/edit', facturas.id]">
                             Editar
                         </a>
+                        
+                        <!-- Botón de eliminar -->
                         <button 
                             pButton 
                             pRipple
                             severity="danger"
-                            icon="pi pi-eraser"
-                            class="mr-1"
+                            icon="pi pi-trash"
+                            class="small-button p-button-rounded p-button-text"
                             (click)="eliminar(facturas.id)">
                             Eliminar
                         </button>
@@ -55,5 +58,3 @@
     </p>
     <p-confirmDialog></p-confirmDialog>
 </p-card>
-
-
