--- a/frontend-gestion-inventario/src/app/components/inventarios/mostrar-inventario/mostrar-inventario.component.html
+++ b/frontend-gestion-inventario/src/app/components/inventarios/mostrar-inventario/mostrar-inventario.component.html
@@ -1,14 +1,14 @@
 <p-card class="w-20 h-full">
     <ng-template pTemplate="header">
-        <div class="flex justify-content-between flex-wrap">
-            <h3 class="ml-4">Registro de Inventarios</h3>
+        <div class="flex justify-content-between items-center">
+            <h3 class="ml-4 text-xl font-semibold text-gray-800">Registro de Inventarios</h3>
             <div class="mt-2">
                 <a 
                     pButton 
                     pRipple
                     label="Crear Inventario" 
                     icon="pi pi-plus"
-                    class="bg-cyan-500"
+                    class="bg-cyan-600 text-white hover:bg-cyan-700 px-4 py-2 rounded-md"
                     [ngStyle]="{'text-decoration': 'none'}" 
                     [routerLink]="['/inventarios/nuevo']">
                 </a>
@@ -16,7 +16,7 @@
         </div>
     </ng-template>
     <p>
-        <p-table [value]="inventarios">
+        <p-table [value]="inventarios" class="custom-table" [rows]="10" [paginator]="true" [responsive]="true">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Producto</th>
@@ -34,28 +34,28 @@
                     <td>{{ inventario.cantidad }}</td>
                     <td>{{ inventario.fecha_movimiento | date }}</td>
                     <td>{{ inventario.observaciones }}</td>
-                    <td class="flex justify-content-center flex-wrap">
+                    <td class="flex justify-content-center space-x-2">
                         <!-- Botón de editar -->
                         <a 
                             pButton 
                             pRipple
                             icon="pi pi-sync"
                             severity="warning"
-                            class="mr-1"
+                            class="small-button p-button-rounded p-button-text"
                             [ngStyle]="{'text-decoration': 'none'}" 
                             [routerLink]="['/inventarios/edit', inventario.id]">
-                            
+                            Editar
                         </a>
-
+                        
                         <!-- Botón de eliminar -->
                         <button 
                             pButton 
                             pRipple
                             severity="danger"
-                            icon="pi pi-eraser"
-                            class="mr-1"
+                            icon="pi pi-trash"
+                            class="small-button p-button-rounded p-button-text"
                             (click)="confirmarEliminacion(inventario.id)">
-                        
+                            Eliminar
                         </button>
                     </td>
                 </tr>
