--- a/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.css
+++ b/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.css
@@ -1,6 +1,13 @@
+.custom-table th {
+  background-color: #f5f5f5;
+  font-weight: bold;
+}
+
+.custom-table td {
+  padding: 10px 15px;
+}
+
 .small-button {
-    padding: 8px 16px; /* Reduce el padding del botón */
-    font-size: 24px;  /* Reduce el tamaño del texto */
-    height: 60px;     /* Ajusta la altura del botón */
-    width: auto;      /* Ajusta el ancho para que se adapte al contenido */
-  }
+  padding: 0.5rem 1rem;
+  font-size: 0.875rem;
+}
