--- a/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.html
+++ b/frontend-gestion-inventario/src/app/components/producto/mostrar-producto/mostrar-producto.component.html
@@ -1,14 +1,14 @@
 <p-card class="w-12 h-full">
     <ng-template pTemplate="header">
-        <div class="flex justify-content-between flex-wrap">
-            <h3 class="ml-4">Registro de Producto</h3>
+        <div class="flex justify-content-between items-center">
+            <h3 class="ml-4 text-xl font-semibold text-gray-800">Registro de Producto</h3>
             <div class="mt-2 mr-2">
                 <a 
                     pButton 
                     pRipple
                     label="Crear Producto" 
                     icon="pi pi-user-plus"
-                    class="bg-cyan-600"
+                    class="bg-cyan-600 text-white hover:bg-cyan-700 px-4 py-2 rounded-md"
                     [ngStyle]="{'text-decoration': 'none'}" 
                     [routerLink]="['/productos/nuevo']">
                 </a>
@@ -16,52 +16,53 @@
         </div>
     </ng-template>
     <p>
-        <p-table [value]="productos">
+        <p-table [value]="productos" class="custom-table" [rows]="10" [paginator]="true" [responsive]="true">
             <ng-template pTemplate="header">
                 <tr>
-                    <th >Nombre</th>
-                    <th >Descripcion</th>
-                    <th >Precio</th>
-                    <th >Stock Actual</th>
-                    <th >Stock Minimo</th>
-                    <th >Categoria</th>
-                    <th >Acciones</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Precio</th>
+                    <th>Stock Actual</th>
+                    <th>Stock Mínimo</th>
+                    <th>Categoría</th>
+                    <th class="flex justify-content-center flex-wrap">Acciones</th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-productos>
                 <tr>
-                    <td >{{ productos.nombre }}</td>
-                    <td >{{ productos.descripcion }}</td>
-                    <td >{{ productos.precio }}</td>
-                    <td >{{ productos.stock_actual }}</td>
-                    <td >{{ productos.stock_minimo }}</td>
-                    <td>{{ productos.categoria.nombre}}</td>
-                    <td class="flex justify-content-center flex-row">
+                    <td>{{ productos.nombre }}</td>
+                    <td>{{ productos.descripcion }}</td>
+                    <td>{{ productos.precio }}</td>
+                    <td>{{ productos.stock_actual }}</td>
+                    <td>{{ productos.stock_minimo }}</td>
+                    <td>{{ productos.categoria.nombre }}</td>
+                    <td class="flex justify-content-center space-x-2">
+                        <!-- Botón de editar -->
                         <a 
                             pButton 
                             pRipple
                             icon="pi pi-sync"
                             severity="warning"
-                            class="mr-1 small-button"
+                            class="small-button p-button-rounded p-button-text"
                             [ngStyle]="{'text-decoration': 'none'}" 
                             [routerLink]="['/productos/edit', productos.id]">
+                            Editar
                         </a>
+                        
+                        <!-- Botón de eliminar -->
                         <button 
                             pButton 
                             pRipple
                             severity="danger"
-                            icon="pi pi-eraser"
-                            class="mr-1 small-button"
+                            icon="pi pi-trash"
+                            class="small-button p-button-rounded p-button-text"
                             (click)="eliminar(productos.id)">
+                            Eliminar
                         </button>
                     </td>
-                    
                 </tr>
             </ng-template>
         </p-table>
     </p>
     <p-confirmDialog></p-confirmDialog>
 </p-card>
-
-
-
