--- a/clase/front_sitealmacen/src/app/components/producto/crear-producto/crear-producto.component.html
+++ b/clase/front_sitealmacen/src/app/components/producto/crear-producto/crear-producto.component.html
@@ -1,12 +1,9 @@
 <p-card header="Crear Producto" [style]="{ width: '100%' }">
-    <ng-template pTemplate="header">
-
-    </ng-template>
     <div>
         <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()" class="p-3 bg-faded">
-
-
             <div class="grid">
+
+                <!-- Nombre del Producto -->
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-receipt"></i></span>
@@ -15,79 +12,63 @@
                     </div>
                 </div>
 
+                <!-- Tipo de Producto -->
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-fw pi-qrcode"></i></span>
-                        <p-treeSelect class="md:w-10rem w-12" containerStyleClass="w-12" [options]="categories"
-                            formControlName="tipoproducto" placeholder="Seleccione un Tipo de Producto" [showClear]="true"
-                            selectionMode="single">
+                        <p-treeSelect class="md:w-10rem w-12" containerStyleClass="w-12" [options]="tipoproducto"
+                            formControlName="tipoproducto" placeholder="Seleccione un Tipo de Producto"
+                            [showClear]="true" selectionMode="single">
                         </p-treeSelect>
+
                     </div>
                 </div>
 
+                <!-- Marca del Producto -->
                 <div class="col-12 sm:col-6">
-                    <div class="p-inputgroup mb-1 ">
+                    <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-pencil"></i></span>
-                        <input class="w-12" type="text" pInputText formControlName="descripcion"
-                            placeholder="descripcion Producto" title="descripcion Producto">
+                        <input class="w-12" type="text" pInputText formControlName="marca"
+                            placeholder="Marca del Producto" title="Marca del Producto">
                     </div>
                 </div>
 
+                <!-- Precio del Producto -->
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-dollar"></i></span>
-                        <input class="w-12" type="text" pInputText formControlName="precio"
+                        <input class="w-12" type="number" pInputText formControlName="precio"
                             placeholder="Precio Producto" title="Precio Producto">
                     </div>
                 </div>
 
+                <!-- Cantidad -->
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
-                        <span class="p-inputgroup-addon"><i class="pi pi-cart-minus"></i></span>
-                        <input class="w-12" type="text" pInputText formControlName="stock_actual"
-                            placeholder="Stock Actual" title="Stock Actual">
+                        <span class="p-inputgroup-addon"><i class="pi pi-sort-numeric-up"></i></span>
+                        <input class="w-12" type="number" pInputText formControlName="cantidad" placeholder="Cantidad"
+                            title="Cantidad">
                     </div>
                 </div>
 
+                <!-- Stock Mínimo -->
                 <div class="col-12 sm:col-6">
                     <div class="p-inputgroup mb-1">
                         <span class="p-inputgroup-addon"><i class="pi pi-cart-minus"></i></span>
-                        <input class="w-12" type="text" pInputText formControlName="stock_minimo"
-                            placeholder="Stock Minimo" title="Stock Minimo">
+                        <input class="w-12" type="number" pInputText formControlName="stockmin" placeholder="Stock Mínimo" title="Stock Mínimo">
+
                     </div>
                 </div>
+
             </div>
 
-           
-
+            <!-- Botones -->
             <div class="flex justify-content-center flex-wrap">
-                <button 
-                    pButton 
-                    pRipple
-                    label="Guardar"
-                    icon="pi pi-save"
-                    severity="info"
-                    class="mr-4"
-                    type="submit"
-                ></button>
-
-                <button 
-                    pButton 
-                    pRipple
-                    label="Cancelar"
-                    icon="pi pi-times-circle"
-                    severity="warning"
-                    class="mr-4"
-                    type="button"
-                    (click)="cancel()"
-                ></button>
-           </div>
-
-
+                <button pButton pRipple label="Guardar" icon="pi pi-save" severity="info" class="mr-4"
+                    type="submit"></button>
+                <button pButton pRipple label="Cancelar" icon="pi pi-times-circle" severity="warning" class="mr-4"
+                    type="button" (click)="cancel()"></button>
+            </div>
         </form>
-
     </div>
-    <ng-template pTemplate="footer">
-
-    </ng-template>
 </p-card>
